<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zsg="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/me_bj" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/top_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="10dp" />

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/title_address_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize"
                        android:layout_marginTop="15dp">

                        <ImageView
                            android:id="@+id/image_back_title_bar"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="left"
                            android:layout_marginLeft="15dp"
                            android:gravity="center"
                            android:onClick="back"
                            android:src="@drawable/bar_back"
                            android:visibility="gone" />

                        <ImageView
                            android:id="@+id/item_view_msg"
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="right"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/me_info" />
                    </android.support.v7.widget.Toolbar>

                    <RelativeLayout
                        android:id="@+id/mydata_relative"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="30dp">

                        <com.lulian.Zaiyunbao.common.widget.CircleImageView
                            android:id="@+id/my_cropimage_view"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:gravity="center"
                            android:src="@drawable/icon_head" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@id/my_cropimage_view"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:text="张三"
                                android:textColor="@color/white"
                                android:textSize="24dp" />

                            <TextView
                                android:id="@+id/user_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="15dp"
                                android:text="13652522222"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_bt" />
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"></LinearLayout>

            <LinearLayout
                android:id="@+id/my_qianbao_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="-100dp"
                android:background="@color/white"
                android:elevation="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/me_txt_yuer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="5500.00"
                            android:textColor="@color/text_color_black"
                            android:textSize="@dimen/text_bt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/balance"
                            android:textColor="@color/text_color_black"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/me_txt_yajin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="5500.00"
                            android:textColor="@color/text_color_black"
                            android:textSize="@dimen/text_bt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="我的押金"
                            android:textColor="@color/text_color_black"
                            android:textSize="14dp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="0.1dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@+id/money_layout"
                        android:background="@color/color_9c" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:src="@drawable/me_wallet" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="我的钱包"
                        android:textColor="@color/text_black"
                        android:textSize="14dp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:orientation="vertical">

                <com.lulian.Zaiyunbao.common.widget.item_view
                    android:id="@+id/item_view_mydata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    zsg:show_bottomline="true"
                    zsg:show_leftimg="@drawable/mydata"
                    zsg:show_text="@string/mydata" />

                <com.lulian.Zaiyunbao.common.widget.item_view
                    android:id="@+id/item_view_aboutme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    zsg:show_bottomline="true"
                    zsg:show_leftimg="@drawable/aboutme"
                    zsg:show_text="@string/aboutmy" />

                <com.lulian.Zaiyunbao.common.widget.item_view
                    android:id="@+id/item_view_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    zsg:show_bottomline="true"
                    zsg:show_leftimg="@drawable/feedback"
                    zsg:show_text="@string/helpfeedback" />

                <com.lulian.Zaiyunbao.common.widget.item_view
                    android:id="@+id/item_view_install"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    zsg:show_bottomline="true"
                    zsg:show_leftimg="@drawable/install"
                    zsg:show_text="@string/settings" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>